--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My Application 20150519</string>
+    <string name="app_name">八字排盘</string>
 
     <string name="action_settings">Settings</string>
     <string name="member_search_hint">姓名或出生年月</string>
