1.封装广告类 2.添加广告和是否是发布版标识 3.输入日期自动显示农历

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
         <item>戌</item>
         <item>亥</item>
     </string-array>
+
+    <bool name="isRelease">false</bool>
+    <bool name="includeAD">false</bool>
 </resources>
