--- a/lunar_calendar/src/main/res/values/strings.xml
+++ b/lunar_calendar/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">万年历</string>
 
     <string name="action_settings">Settings</string>
+
+    <bool name="includeAD">true</bool>
 </resources>
