--- a/lunar_calendar/src/main/res/values/strings.xml
+++ b/lunar_calendar/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">万年历</string>
+    <string name="app_name">干支历</string>
 
     <string name="action_settings">Settings</string>
 
