--- a/liuyao/src/main/res/values/strings.xml
+++ b/liuyao/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="action_settings">Settings</string>
     <bool name="includeAD">false</bool>
+    <string name="externalSavingFolder">lsw.Hexagrams</string>
 </resources>
