日历控件的调整

--- a/lunar_calendar/src/main/res/values/strings.xml
+++ b/lunar_calendar/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
 
     <string name="action_settings">Settings</string>
 
-    <bool name="includeAD">true</bool>
+    <bool name="includeAD">false </bool>
 </resources>
